--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">wvsVetretungsplan</string>
+    <string name="app_name">Vetretungsplan</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">Vertretungsplan</string>
@@ -9,8 +9,6 @@
     <string name="download">Runterladen</string>
 
     <string name="lorem_ipsum">
-        Werner-von-Siemens-Gymnasium
-        „Die Zukunft hängt davon ab, was wir heute tun.“ (Mahatma Gandhi)
-        Vertretungsplan
+        Bitte klicken Sie auf den Button um den Vertretungsplan herunterzuladen.
     </string>
 </resources>
